--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.80.0",
-    "@react-navigation/native-stack": "^7.3.16",
+    "@react-navigation/bottom-tabs": "^7.3.15",
+    "@react-navigation/native": "^7.1.12",
+    "@react-navigation/native-stack": "^7.3.17",
+    "axios": "^1.10.0",
+    "i18n-js": "^4.5.1",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "^2.26.0",
-    "react-native-safe-area-context": "^5.4.1"
+    "react-native-localize": "^3.4.1",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "^4.11.1",
+    "react-native-video": "^6.15.0",
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -28,6 +37,7 @@
     "@react-native/eslint-config": "0.80.0",
     "@react-native/metro-config": "0.80.0",
     "@react-native/typescript-config": "0.80.0",
+    "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
     "@types/react-test-renderer": "^19.1.0",
